# personaledge

./: .mise.toml  LICENSE  README.md  pyproject.toml  send_slack.py  single_page_script.py
.github/workflows/: ci-test.yml
data/azure-ai-service-blog/: Data Storage in Azure OpenAI Service | Microsoft Community Hub.md  Deploying Azure ND H100 v5 Instances in AKS with NVIDIA MIG GPU Slicing | Microsoft Community Hub.md  Enterprise Best Practices for Fine-Tuning Azure OpenAI Models | Microsoft Community Hub.md  Generative AI for Developers: Exploring New Tools and APIs in Azure OpenAI Service.md  Prototyping Agents with visual tools | Microsoft Community Hub.md  README.md  Reproduce Deepseek R1-zero Aha Moment | Microsoft Community Hub.md  Transform RAG and Search with Azure AI Document Intelligence.md  Using Semantic Kernel to control a BBC Microbit | Microsoft Community Hub.md
personaledge/: config.py  logger.py
personaledge/applications/: __init__.py  web_page_service.py
personaledge/domains/models/: __init__.py  page.py  sitemap.py
personaledge/domains/services/: __init__.py  personalize.py  sitemap.py  web_page.py
prompts/: sample.prompty
scripts/: from_sitemap_to_dir.py  single_page_script.py
tests/: conftest.py
tests/applications/: test_app_service.py  test_web_page_service.py
tests/data/: sample.prompty
tests/domains/services/: test_personalize_domain_service.py  test_sitemap_domain_service.py  test_web_page_domain_service.py
